[package]
name = "tokio-mockstream"
version = "1.1.0"
description = "A fake stream for testing network applications backed by buffers."
authors = ["Aaron Weiss <awe@pdgn.co>"]
license = "MIT/Apache-2.0"
keywords = ["testing", "async"]
repository = "https://github.com/aatxe/tokio-mockstream"
readme = "README.md"

[dependencies]
futures = "0.1"
tokio-io = "0.1"

[dev-dependencies]
bytes = "0.4"
